--- a/hanstagram/index.html
+++ b/hanstagram/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <!-- Fonts -->
@@ -27,8 +26,8 @@
           https://live.staticflickr.com/65535/52686939028_884bf96844_q_d.jpg):</label
         >
         <input type="text" name="photo" id="photo" />
-        <label for="caption">Caption:</label>
-        <input type="text" name="caption" id="caption" />
+        <label>Caption:</label>
+        <input type="text" name="caption" />
         <button>Share! 🎉</button>
       </form>
     </section>
@@ -44,7 +43,7 @@
           </div>
         </div>
         <div class="image-post">
-          <img src="http://mrmrs.github.io/photos/002.jpg" alt="starry night" />
+          <img src="http://mrmrs.github.io/photos/002.jpg" />
         </div>
         <div class="caption">
           <h3 class=""><span class="heart"></span>fritzvd</h3>
